--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "j-avascript",
   "type": "module",
-  "source": "src/index.html",
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "solid-js": "^1.8.22"
   },
   "devDependencies": {
-    "parcel": "^2.12.0",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.11",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "vite": "^5.4.5",
+    "vite-plugin-solid": "^2.10.2"
   }
 }
